--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.8",
     "@fortawesome/free-solid-svg-icons": "5.5.0",
     "@ng-bootstrap/ng-bootstrap": "4.0.0",
-    "bootstrap": "4.1.3",
+    "bootstrap": "4.3.1",
     "core-js": "2.5.7",
     "moment": "2.22.2",
     "ng-jhipster": "0.5.6",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@angular/cli": "7.0.2",
-    "@angular/compiler-cli": "7.0.0",
+    "@angular/compiler-cli": "^7.2.10",
     "@ngtools/webpack": "7.0.2",
     "@types/jest": "23.3.5",
     "@types/node": "9.4.7",
@@ -50,7 +50,7 @@
     "file-loader": "1.1.11",
     "fork-ts-checker-webpack-plugin": "0.4.10",
     "friendly-errors-webpack-plugin": "1.7.0",
-    "generator-jhipster": "5.7.0",
+    "generator-jhipster": "^5.8.2",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.1.0",
@@ -63,6 +63,7 @@
     "mini-css-extract-plugin": "0.4.2",
     "moment-locales-webpack-plugin": "1.0.5",
     "optimize-css-assets-webpack-plugin": "5.0.1",
+    "postcss-loader": "2.1.6",
     "prettier": "1.14.3",
     "rimraf": "2.6.1",
     "simple-progress-webpack-plugin": "1.1.2",
@@ -75,16 +76,15 @@
     "tslint-config-prettier": "1.15.0",
     "tslint-loader": "3.6.0",
     "typescript": "3.1.3",
-    "postcss-loader": "2.1.6",
-    "xml2js": "0.4.19",
     "webpack": "4.25.1",
     "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.10",
+    "webpack-dev-server": "^3.2.1",
     "webpack-merge": "4.1.4",
     "webpack-notifier": "1.7.0",
     "webpack-visualizer-plugin": "0.1.11",
     "workbox-webpack-plugin": "3.6.3",
-    "write-file-webpack-plugin": "4.4.1"
+    "write-file-webpack-plugin": "4.4.1",
+    "xml2js": "0.4.19"
   },
   "engines": {
     "node": ">=8.9.0"
