--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -23,7 +23,7 @@ spring:
     profiles:
         active: dev
         include:
-            - swagger
+#            - swagger
             # Uncomment to activate TLS for the dev profile
             #- tls
     devtools:
